Added the function that enables the color of chips to be changed according to the profile's preference

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string-array name="playerColorChoices">
         <item>Red</item>
         <item>Blue</item>
-        <item>Yellow</item>
+        <item>Gold</item>
         <item>Green</item>
         <item>Orange</item>
     </string-array>
